4/15/1999
	- 0.8.3 released
	- Restrict number of WorkerThreads to 10
	- ExtendedResolver timer code fixes
	- ExtendedResolver race condition fix

4/14/1999
	- ExtendedResolver reentrancy fixes
	- Names are marked as qualified/unqualified
	- FindServer looks for search path from -Ddns.search1, etc.
		and in /etc/resolv.conf

4/13/1999
	- 0.8.2 released
	- More javadoc-ed classes in DNS.*
	- The message ID stuff from 4/10 broke TSIG, so it's gone
	- Changes to ExtendedResolver's handling of child Resolvers
	- Too many threads were being created
	- Threads should now have meaningful names

4/12/1999
	- NameSet shouldn't be using wildcards, since it's not correct for
		a cache (a name could match a wildcard and return wildcard
		data before the cache learned about data for the name)
	- javadoc-ed DNS.utils.* and some of DNS.*
	- ExtendedResolver allows specifying Resolvers to use
	- SimpleResolver and ExtendedResolver share a thread pool
	- ExtendedResolver and FindServer bugfixes
	- Header bug that actually caused the 0.8.1 release fixed
	- bugfix release 0.8.1 released
	- Messages weren't being cloned properly
	- Resolver didn't handle a query to nowhere correctly

4/11/1999
	- 0.8 released
	- Resolver is now an interface, implemented by SimpleResolver
		and ExtendedResolver.
	- added ExtendedResolver, which sends multiple queries to multiple
		resolvers.
	- jnamed rejects non-queries

4/10/1999
	- added Message.newQuery() to make building queries easier
	- Record.fromWire verifies that the record length is correct
	- Resolver.sendAsync() now uses worker threads rather than
		starting a new thread each time.
	- Multiple servers can be found by setting the dns.server<n>
		properties (or from /etc/resolv.conf).
	- Message/Header doesn't generate the message id until the message
		is sent or the id is queried for

4/9/1999
	- added setTimeout to Resolver

4/8/1999
	- fixed obscure md5 bug
	- made Resolver(null) and Resolver() equivalent

4/7/1999